[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrayvec = "0.7"
rangemap = "1.4"
strum = { version = "0.25", features = ["derive"] }
nom = "7"
itertools = "0.12"
trie-hard = "0.1"
indexmap = "2.7"

[[bin]]
name = "aoc2023-21"
path = "2023/21.rs"

[[bin]]
name = "aoc2023-17"
path = "2023/17.rs"

[[bin]]
name = "aoc2023-12"
path = "2023/12.rs"

[[bin]]
name = "aoc2023-05"
path = "2023/05.rs"

[[bin]]
name = "aoc2024-01"
path = "2024/01.rs"

[[bin]]
name = "aoc2024-04"
path = "2024/04.rs"

[[bin]]
name = "aoc2024-07"
path = "2024/07.rs"

[[bin]]
name = "aoc2024-08"
path = "2024/08.rs"

[[bin]]
name = "aoc2024-13"
path = "2024/13.rs"

[[bin]]
name = "aoc2024-19"
path = "2024/19.rs"

[[bin]]
name = "aoc2024-20"
path = "2024/20.rs"

[[bin]]
name = "aoc2024-21"
path = "2024/21.rs"

[[bin]]
name = "aoc2024-22"
path = "2024/22.rs"

[[bin]]
name = "aoc2024-25"
path = "2024/25.rs"

[lints.clippy]
pedantic = "deny"
